--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/fav.png">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/touch.png">
+  <meta content="%PUBLIC_URL%/touch.png" itemprop="image">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/touch.png">
   <title>Brick</title>
   <style>
     body {
